KINO-67 Endpoint for reserved seats by schedule id